feat(linux)!: Remove legacy javahelp2
Use GitHub Pages on the web for now